--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,10 @@ description: >- # used by seo meta and the atom feed
   Lazyman supported Neovim configurations using the LazyVim configuration framework.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ""
+url: "https://lazyvim.lazyman.dev"
+
+plugins:
+  - jekyll-sitemap
 
 github:
   username: doctorfree # change to your github username
